--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -28,9 +28,9 @@
                     <TextBox x:Name="txt_name_pazzle" HorizontalAlignment="Left" Margin="26,35,0,0" Text="Название" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
                     <TextBox x:Name="txt_name_company_pazzle" HorizontalAlignment="Left" Margin="27,142,0,0" Text="Компания-производитель" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
                     <TextBox x:Name="txt_count_of_elem_pazzle" HorizontalAlignment="Left" Margin="27,78,0,0" Text="Количество элементов" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-                    <Button x:Name="btn_delete_pazzle" Content="Удалить" HorizontalAlignment="Left" Margin="296,323,0,0" VerticalAlignment="Top" Width="100" Height="30"/>
-                    <Button x:Name="btn_prev_pazzle" Content="Назад" HorizontalAlignment="Left" Margin="645,343,0,0" VerticalAlignment="Top" Width="50" Height="50"/>
-                    <Button x:Name="btn_next_pazzle" Content="Вперед" HorizontalAlignment="Left" Margin="714,343,0,0" VerticalAlignment="Top" Width="50" Height="50"/>
+                    <Button x:Name="btn_delete_pazzle" Content="Удалить" HorizontalAlignment="Left" Margin="296,323,0,0" VerticalAlignment="Top" Width="100" Height="30" Click="btn_delete_pazzle_Click"/>
+                    <Button x:Name="btn_prev_pazzle" Content="Назад" HorizontalAlignment="Left" Margin="645,343,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="btn_prev_pazzle_Click"/>
+                    <Button x:Name="btn_next_pazzle" Content="Вперед" HorizontalAlignment="Left" Margin="714,343,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="btn_next_pazzle_Click"/>
                     <Button x:Name="btn_reduct_pazzle" Content="Редактировать" HorizontalAlignment="Left" Margin="165,325,0,0" VerticalAlignment="Top" Width="100" Height="30" Click="btn_reduct_pazzle_Click"/>
                     <Button x:Name="btn_add_pazzle" Content="Добавить" HorizontalAlignment="Left" Margin="36,324,0,0" VerticalAlignment="Top" Width="100" Height="30" Click="btn_add_pazzle_Click"/>
                 </Grid>
@@ -41,11 +41,11 @@
                     <TextBox x:Name="txt_description_game" HorizontalAlignment="Left" Margin="27,106,0,0" Text="Кртакое описание геймплея" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
                     <TextBox x:Name="txt_developer_game" HorizontalAlignment="Left" Margin="27,68,0,0" Text="Разработчик" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
                     <TextBox x:Name="txt_count_of_players_game" HorizontalAlignment="Left" Margin="27,163,0,0" Text="Кол-во игроков" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-                    <Button x:Name="btn_add_game" Content="Button" HorizontalAlignment="Left" Margin="47,323,0,0" VerticalAlignment="Top" Width="100" Height="30"/>
-                    <Button x:Name="btn_delete_game" Content="Button" HorizontalAlignment="Left" Margin="298,325,0,0" VerticalAlignment="Top" Width="100" Height="30"/>
-                    <Button x:Name="btn_reduct_game" Content="Button" HorizontalAlignment="Left" Margin="174,323,0,0" VerticalAlignment="Top" Width="100" Height="30"/>
-                    <Button x:Name="btn_prev_game" Content="Назад" HorizontalAlignment="Left" Margin="613,331,0,0" VerticalAlignment="Top" Width="50" Height="50"/>
-                    <Button x:Name="btn_next_game" Content="Вперед" HorizontalAlignment="Left" Margin="674,330,0,0" VerticalAlignment="Top" Width="50" Height="50"/>
+                    <Button x:Name="btn_add_game" Content="Добавить" HorizontalAlignment="Left" Margin="47,323,0,0" VerticalAlignment="Top" Width="100" Height="30" Click="btn_add_game_Click"/>
+                    <Button x:Name="btn_delete_game" Content="Удалить" HorizontalAlignment="Left" Margin="298,325,0,0" VerticalAlignment="Top" Width="100" Height="30" Click="btn_delete_game_Click"/>
+                    <Button x:Name="btn_reduct_game" Content="Редактировать" HorizontalAlignment="Left" Margin="174,323,0,0" VerticalAlignment="Top" Width="100" Height="30" Click="btn_reduct_game_Click"/>
+                    <Button x:Name="btn_prev_game" Content="Назад" HorizontalAlignment="Left" Margin="613,331,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="btn_prev_game_Click"/>
+                    <Button x:Name="btn_next_game" Content="Вперед" HorizontalAlignment="Left" Margin="674,330,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="btn_next_game_Click"/>
                 </Grid>
             </TabItem>
         </TabControl>
