--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" ResizeMode="NoResize">
 
     <Window.Resources>
         <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
@@ -52,6 +52,11 @@
                     <Button Style="{DynamicResource ButtonStyle1}" x:Name="btn_add_book" Click="btn_add_book_Click"/>
                     <Button Style="{DynamicResource ButtonStyle}" x:Name="btn_reduct_book" Click="btn_reduct_book_Click"/>
                     <Image HorizontalAlignment="Left" Height="208" Margin="557,51,0,0" VerticalAlignment="Top" Width="192" Source="github.png" Stretch="Fill"/>
+                    <Label Content="Название" HorizontalAlignment="Left" Margin="167,41,0,0" VerticalAlignment="Top" Height="29" Width="77"/>
+                    <Label Content="Автор" HorizontalAlignment="Left" Margin="162,81,0,0" VerticalAlignment="Top" Height="29" Width="77"/>
+                    <Label Content="Иллюстратор" HorizontalAlignment="Left" Margin="163,121,0,0" VerticalAlignment="Top" Height="29" Width="99"/>
+                    <Label Content="Издательство" HorizontalAlignment="Left" Margin="164,164,0,0" VerticalAlignment="Top" Height="29" Width="94"/>
+                    <Label Content="Год издания" HorizontalAlignment="Left" Margin="162,209,0,0" VerticalAlignment="Top" Height="29" Width="77"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Пазл" Height="24" Margin="-2,-2,-2,0" VerticalAlignment="Top">
@@ -64,6 +69,9 @@
                     <Button x:Name="btn_next_pazzle" Content="Вперед" HorizontalAlignment="Left" Margin="700,306,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="btn_next_pazzle_Click"/>
                     <Button Style="{DynamicResource ButtonStyle}" x:Name="btn_reduct_pazzle" Click="btn_reduct_pazzle_Click"/>
                     <Button Style="{DynamicResource ButtonStyle1}" x:Name="btn_add_pazzle" Click="btn_add_pazzle_Click"/>
+                    <Label Content="Название" HorizontalAlignment="Left" Margin="167,28,0,0" VerticalAlignment="Top" Height="29" Width="77"/>
+                    <Label Content="Количество элементов" HorizontalAlignment="Left" Margin="165,78,0,0" VerticalAlignment="Top" Height="27" Width="153"/>
+                    <Label Content="Компания-производитель" HorizontalAlignment="Left" Margin="166,146,0,0" VerticalAlignment="Top" Height="29" Width="168"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Настольная игра" Height="24" Margin="-2,-2,-2,0" VerticalAlignment="Top">
@@ -77,6 +85,10 @@
                     <Button Style="{DynamicResource ButtonStyle}" x:Name="btn_reduct_game" Click="btn_reduct_game_Click"/>
                     <Button x:Name="btn_prev_game" Content="Назад" HorizontalAlignment="Left" Margin="612,308,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="btn_prev_game_Click"/>
                     <Button x:Name="btn_next_game" Content="Вперед" HorizontalAlignment="Left" Margin="673,307,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="btn_next_game_Click"/>
+                    <Label Content="Разработчик" HorizontalAlignment="Left" Margin="164,66,0,0" VerticalAlignment="Top" Height="29" Width="132"/>
+                    <Label Content="Кртакое описание геймплея" HorizontalAlignment="Left" Margin="169,111,0,0" VerticalAlignment="Top" Height="29" Width="180"/>
+                    <Label Content="Кол-во игроков" HorizontalAlignment="Left" Margin="169,158,0,0" VerticalAlignment="Top" Height="29" Width="167"/>
+                    <Label Content="Название" HorizontalAlignment="Left" Margin="167,28,0,0" VerticalAlignment="Top" Height="29" Width="77"/>
                 </Grid>
             </TabItem>
         </TabControl>
